auto changes from full build/test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,5 @@ Maintainer: Nick Golding <nick.golding@zoo.ox.ac.uk>
 Description: A framework reimplement and combine common statistical models
     using Gaussian processes
 License: MIT
-Suggests: testthat
+Suggests:
+    testthat
