--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ Description: A framework reimplement and combine common statistical models
 License: MIT
 Suggests:
     testthat
+Imports:
+    fields
