added docs for kernel class generic functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,16 @@
 
 S3method("*",kernel)
 S3method("+",kernel)
+S3method(print,kernel)
 S3method(prod,kernel)
 S3method(sum,kernel)
+S3method(summary,kernel)
 export("%x%")
+export(getColumns)
+export(getParameters)
+export(getSubKernel)
+export(getType)
+export(is.kernel)
 export(kron)
 export(rbf)
+export(setParameters)
