added iid kernel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ S3method(prod,kernel)
 S3method(sum,kernel)
 S3method(summary,kernel)
 export("%x%")
+export(demoKernel)
 export(getColumns)
 export(getParameters)
 export(getSubKernel)
 export(getType)
+export(iid)
 export(is.kernel)
 export(kron)
 export(lin)
