added intercept kernel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(getParameters)
 export(getSubKernel)
 export(getType)
 export(iid)
+export(int)
 export(is.kernel)
 export(kron)
 export(lin)
