a few bug fixes, error messages and now exporting and documenting gp interface function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getColumns)
 export(getParameters)
 export(getSubKernel)
 export(getType)
+export(gp)
 export(iid)
 export(int)
 export(is.kernel)
