added options to control variance calculations in projector functions, added, documented and exported a predict function for gps, moved some functions between function files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("*",kernel)
 S3method("+",kernel)
 S3method(plot,kernel)
+S3method(predict,gp)
 S3method(print,kernel)
 S3method(prod,kernel)
 S3method(sum,kernel)
