added basic print function for gp objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("*",kernel)
 S3method("+",kernel)
 S3method(plot,kernel)
 S3method(predict,gp)
+S3method(print,gp)
 S3method(print,kernel)
 S3method(prod,kernel)
 S3method(sum,kernel)
@@ -17,6 +18,7 @@ export(getType)
 export(gp)
 export(iid)
 export(int)
+export(is.gp)
 export(is.kernel)
 export(kron)
 export(lin)
