--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method("*",kernel)
 S3method("+",kernel)
+S3method(image,covarmat)
 S3method(plot,kernel)
 S3method(predict,gp)
 S3method(print,kernel)
@@ -17,6 +18,7 @@ export(getType)
 export(gp)
 export(iid)
 export(int)
+export(is.covarmat)
 export(is.kernel)
 export(kron)
 export(lin)
