added covarmat class for covariance matrices produced by evaluating kernels (the name covmat conflicts with a spam class)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(is.covarmat)
 export(is.kernel)
 export(kron)
 export(lin)
+export(palPuRd)
 export(per)
 export(rbf)
 export(setParameters)
