added function to update model objects (paving the way for hyperparameter optimisation); made print.gp exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("+",kernel)
 S3method(image,covarmat)
 S3method(plot,kernel)
 S3method(predict,gp)
+S3method(print,gp)
 S3method(print,kernel)
 S3method(prod,kernel)
 S3method(sum,kernel)
