--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ S3method(plot,kernel)
 S3method(predict,gp)
 S3method(print,gp)
 S3method(print,kernel)
+S3method(print,parameter)
 S3method(prod,kernel)
 S3method(sum,kernel)
 S3method(summary,kernel)
+S3method(update,parameter)
 export("%x%")
 export(demoKernel)
 export(getColumns)
@@ -21,9 +23,12 @@ export(iid)
 export(int)
 export(is.covarmat)
 export(is.kernel)
+export(is.parameter)
 export(kron)
 export(lin)
 export(palPuRd)
 export(per)
+export(pos)
 export(rbf)
 export(setParameters)
+export(unit)
