added exponential covariance function, docs and exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(summary,kernel)
 S3method(update,parameter)
 export("%x%")
 export(demoKernel)
+export(expo)
 export(getColumns)
 export(getParameters)
 export(getSubKernel)
