--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 S3method("*",kernel)
 S3method("+",kernel)
+S3method("-",kernel)
+S3method("/",kernel)
+S3method("^",kernel)
 S3method(image,covarmat)
 S3method(plot,kernel)
 S3method(predict,gp)
