--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1-1
 Date: 2015-02-07
 Author: Nick Golding
 Maintainer: Nick Golding <nick.golding@zoo.ox.ac.uk>
-Description: A framework reimplement and combine common statistical models
+Description: A framework to reimplement and combine common statistical models
     using Gaussian processes
 License: MIT + file LICENSE
 Suggests:
