sorting out imports for please R CMD check on R-devel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,4 +40,28 @@ export(rq)
 export(setParameters)
 export(unc)
 export(unit)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(fields,image.plot)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,grey)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,plot)
+importFrom(graphics,title)
+importFrom(stats,dlogis)
+importFrom(stats,dnorm)
+importFrom(stats,dpois)
+importFrom(stats,gaussian)
+importFrom(stats,kmeans)
+importFrom(stats,model.matrix)
+importFrom(stats,optim)
+importFrom(stats,optimise)
+importFrom(stats,plogis)
+importFrom(stats,pnorm)
+importFrom(stats,qlogis)
+importFrom(stats,qnorm)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,update)
+importFrom(utils,capture.output)
