overloading kronecker function, rather than using kron

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ export(int)
 export(is.covarmat)
 export(is.kernel)
 export(is.parameter)
-export(kron)
 export(lin)
 export(mat32)
 export(mat52)
@@ -40,6 +39,7 @@ export(rq)
 export(setParameters)
 export(unc)
 export(unit)
+exportMethods(kronecker)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(fields,image.plot)
 importFrom(grDevices,colorRampPalette)
