documenting kronecker arguments and importing methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,8 @@ importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,plot)
 importFrom(graphics,title)
+importFrom(methods,setClass)
+importFrom(methods,setMethod)
 importFrom(stats,dlogis)
 importFrom(stats,dnorm)
 importFrom(stats,dpois)
