adding travis & codecov plus badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,32 @@
-## Sample .travis.yml file for use with metacran/r-builder
-## See https://github.com/metacran/r-builder for details.
-
-language: c
+language: r
+cache: packages
 sudo: required
 
-before_install:
-  - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
-  - chmod 755 pkg-build.sh
-  - ./pkg-build.sh bootstrap
-
-install:
-  - ./pkg-build.sh install_deps
-
-script:
-  - ./pkg-build.sh run_tests
-
-after_failure:
-  - ./pkg-build.sh dump_logs
-
+# Install the suggested packages
+r_packages:
+ - testthat
+ - covr
+ 
+## After success update the code coverage
+after_success:
+ - Rscript -e 'library(covr);codecov()'
+ 
+# Warnings don't fail build
+warnings_are_errors: false
+ 
+## Email notification if the package pass status changes
 notifications:
-  email:
-    on_success: change
-    on_failure: change
-
+email:
+  on_success: change
+  on_failure: change
+  
+## Set up the matrix of different runs
 env:
   matrix:
-    - RVERSION=oldrel
-    - RVERSION=release
-    - RVERSION=devel
-
+    - r: release
+      not_cran: false
+      r_check_args: "--no-manual --as--cran"
+    - r: devel
+      not_cran: false
+      r_check_args: "--no-manual --as--cran"
+      
