--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,3 +65,4 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,update)
 importFrom(utils,capture.output)
+importFrom(viridis,viridis)
